# SLAM-Notes

./: README.md
examples/01_CMake_Basic/: CMakeLists.txt  helloSLAM.cpp  libShowImage.cpp  libShowImage.hpp
examples/02_Eigen/: CMakeLists.txt  eigenMatrix.cpp
examples/03_PointCloud/: CMakeLists.txt  pointCloud.cpp
examples/04_FeaturePointMatching/: CMakeLists.txt  featurePointMatching.cpp
examples/05_Optimization/ceres_curve_fitting/: CMakeLists.txt  main.cpp
examples/05_Optimization/g2o_curve_fitting/: CMakeLists.txt  main.cpp
examples/05_PoseEstimation/: CMakeLists.txt  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp
examples/06_PoseEstimation/: CMakeLists.txt  pose_estimation_2d2d.hpp  pose_estimation_3d2d.cpp  pose_estimation_3d2d.hpp  pose_estimation_3d3d.cpp  pose_estimation_3d3d.hpp  triangulation.cpp  triangulation.hpp
examples/07_OpticalFlow/LKFlow/: useLK.cpp
examples/07_OpticalFlow/data/: associate.py
project/0.1/: CMakeLists.txt
project/0.1/config/: default.yaml
project/0.1/include/myslam/: camera.h  config.h  frame.h  map.h  mappoint.h
project/0.1/src/: camera.cpp  config.cpp  frame.cpp  map.cpp  mappoint.cpp
project/0.2/config/: default.yaml
project/0.2/include/myslam/: config.h  frame.h  map.h  mappoint.h  visual_odometry.h
project/0.2/src/: camera.cpp  config.cpp  frame.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
project/0.2/test/: run_vo.cpp
